[project]
name = "vision-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colpali-engine>=0.3.15,<0.4",
    "transformers>=5.3.0,<5.4.0",
    "torch",
    "torchvision",
    "accelerate",
    "pdf2image",
    "pillow",
    "numpy",
    "qdrant-client>=1.12.0",
    "langgraph",
    "google-genai",
    "python-dotenv",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "streamlit",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{index = "pytorch-cu128" }]
torchvision = [{index = "pytorch-cu128" }]
